Arreglar rutas de static para Render

--- a/templates/editar_denuncia.html
+++ b/templates/editar_denuncia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Denuncia - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/editar_denuncia.css' %}">
+    <link rel="stylesheet" href="{% static 'css/editar_denuncia.css' %}">
 </head>
 <body>
     <nav>
