--- a/templates/gestionar_usuarios.html
+++ b/templates/gestionar_usuarios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestionar Usuarios - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/gestionar_usuarios.css' %}">
+    <link rel="stylesheet" href="{% static 'css/gestionar_usuarios.css' %}">
 </head>
 <body>
     <nav>
