--- a/templates/pagina3.html
+++ b/templates/pagina3.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flora y Fauna por Ubicación</title>
-    <link rel="stylesheet" href="{% static 'app/css/pagina3.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pagina3.css' %}">
 </head>
 <body>
     <header class="header">
