--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Perfil - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/perfil.css' %}">
+    <link rel="stylesheet" href="{% static 'css/perfil.css' %}">
 </head>
 <body>
     <nav>
