--- a/templates/mis_denuncias.html
+++ b/templates/mis_denuncias.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis Denuncias - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/mis_denuncias.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mis_denuncias.css' %}">
 </head>
 <body>
     <nav>
