--- a/templates/pagina4.html
+++ b/templates/pagina4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/pagina4.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pagina4.css' %}">
 </head>
 <body>
     <nav>
