--- a/templates/registro_publico.html
+++ b/templates/registro_publico.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cuenta - SilvaSentinel</title>
-    <link rel="stylesheet" href="{% static 'app/css/registro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registro.css' %}">
 </head>
 <body>
     <div class="register-container">
