--- a/templates/pagina3.html
+++ b/templates/pagina3.html
@@ -1,11 +1,10 @@
-
 {% load static %}
 
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Flora y Fauna por Ubicación</title>
+    <title>Flora y Fauna por Nombre</title>
     <link rel="stylesheet" href="{% static 'css/pagina3.css' %}">
 </head>
 <body>
@@ -31,52 +30,8 @@
             <h2>Resultados para: "{{ ubicacion }}" (página {{ page }})</h2>
 
             <div class="columnas">
-                <div class="columna flora">
-                    <h3>Flora</h3>
-                    {% if flora_results %}
-                        {% for planta in flora_results %}
-                            <article class="tarjeta">
-                                {% if planta.imagen %}
-                                    <img src="{{ planta.imagen }}" alt="{{ planta.nombre_comun }}">
-                                {% endif %}
-                                <h4>{{ planta.nombre_comun }}</h4>
-                                <p class="cientifico">{{ planta.nombre_cientifico }}</p>
-                                <p class="meta">
-                                    {% if planta.tipo %}<span>Tipo: {{ planta.tipo }}</span>{% endif %}
-                                    {% if planta.ciclo %}<span>Ciclo: {{ planta.ciclo }}</span>{% endif %}
-                                </p>
-                                <p class="descripcion">{{ planta.descripcion }}</p>
-                            </article>
-                        {% endfor %}
-                    {% else %}
-                        <p>No se encontró flora asociada para esta ubicación.</p>
-                    {% endif %}
-                </div>
-
-                <div class="columna fauna">
-                    <h3>Fauna</h3>
-                    {% if fauna_results %}
-                        {% for animal in fauna_results %}
-                            <article class="tarjeta">
-                                <h4>{{ animal.nombre }}</h4>
-                                <p class="cientifico">{{ animal.nombre_cientifico }}</p>
-                                <p class="meta">
-                                    {% if animal.habitat %}<span>Hábitat: {{ animal.habitat }}</span>{% endif %}
-                                    {% if animal.dieta %}<span>Dieta: {{ animal.dieta }}</span>{% endif %}
-                                    {% if animal.poblacion %}<span>Población estimada: {{ animal.poblacion }}</span>{% endif %}
-                                </p>
-                                {% if animal.ubicaciones %}
-                                    <p class="ubicaciones">Ubicaciones: {{ animal.ubicaciones }}</p>
-                                {% endif %}
-                                {% if animal.descripcion %}
-                                    <p class="descripcion">{{ animal.descripcion }}</p>
-                                {% endif %}
-                            </article>
-                        {% endfor %}
-                    {% else %}
-                        <p>No se encontró fauna asociada para esta búsqueda.</p>
-                    {% endif %}
-                </div>
+                <!-- flora -->
+                ...
             </div>
 
             <div class="paginacion">
@@ -90,5 +45,9 @@
             </div>
         </section>
     {% endif %}
+
+    <div class="volver-inicio">
+        <a class="btn" href="{% url 'index' %}">Volver al inicio</a>
+    </div>
 </body>
 </html>
